# ollaix-chatBox

./: .env.example  .gitignore  LICENSE  README.md  compose.prod.yml  compose.test.yml  compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
docker/api/: Dockerfile  Dockerfile.prod
docker/ollama/: Dockerfile
src/: main.py  routes.py
src/config/: env.py  exception_handler.py  settings.py
src/controllers/: __init__.py  chat_controller.py
src/schemas/: chat_schemas.py
src/services/: ai_service_interface.py  dummy_service.py  gemini_service.py  ollama_service.py
tests/: conftest.py  test_chat_completion.py  test_chat_validation.py  test_health.py  test_models.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  PWAReloadPrompt.tsx  i18n.d.ts  index.css  vite-env.d.ts
ui/src/components/: ChatContainer.tsx  ChatForm.tsx  EdidButton.tsx  Footer.tsx  Header.tsx  LikeDislikeButton.tsx  MessageActionsButton.tsx  MessageItem.tsx  MessageList.tsx  MessageSkeleton.tsx  ThinkingDisplay.tsx
ui/src/hooks/: useChatStream.ts
ui/src/i18n/: ui.ts
ui/src/pages/: Home.tsx
ui/src/utils/: types.ts
